Fixed layout issues with buttons

--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
 body{
     /* background-color: #2f5d62; */
     font-size: 16px;
-    
-    
     background-color: #161925;
     color: #AFC1D5;
 }
@@ -32,7 +30,6 @@ h1{
     border-radius: 8px;
     padding: 20px;
     font-size: 20px;
-    margin-top: 100px;
     background-color: rgba(175, 193, 213, 0.2);
     border-color: #CBF7ED;
 }
@@ -57,16 +54,14 @@ h1{
     background-color: rgba(0,0,0,0.9);
 }
 
-span #formatter{
-    padding: 45px;
+.newBookButton {
+    margin-top: 100px;
 }
-
 #formHolder{   
     display: none;
     background-color: rgba(22, 25, 37, 1.0);
     border-radius: 8px;
     width: 25vw;
-    margin-top: 80px;
     flex-direction: column;
     border-bottom: solid rgba(175, 193, 213, 0.4);
     border-style: solid;
@@ -137,13 +132,11 @@ textarea {
     display: none;
     background-color: rgba(22, 25, 37, 1.0);
     border-radius: 8px;
-    width: 40vw;
-    margin-top: 80px;
+    width: 35vw;
     flex-direction: column;
     border-bottom: solid rgba(175, 193, 213, 0.4);
     border-style: solid;
-    height: 80vh;
-    justify-content: space-between;
+    height: 75vh;
     overflow: auto;
 }
 
@@ -208,6 +201,7 @@ textarea {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    
 }
 
 /* Wrapper for the library contents */
